Updated Vivado project, automatic commit

--- a/src/system-user.dtsi
+++ b/src/system-user.dtsi
@@ -7,3 +7,10 @@
 
 // Custom IP map to UIO
 
+&axi_bram_ctrl_0 {
+	compatible = "generic-uio";
+};
+
+&nn_monitor {
+	compatible = "generic-uio";
+};
